[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
hyper = "0.14.27"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
mime = "0.3.17"
serde = "1.0.188"
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.75"
thiserror = "1.0.49"

